Fix page-wrapper being too small

--- a/css/common.css
+++ b/css/common.css
@@ -43,7 +43,8 @@ html {
 
 body {
   font-family: 'Lato', sans-serif;
-  background-color: #f2f2f2;    
+  background-color: #f2f2f2;
+   border: 1px solid blue;
 }
 
 /*Nav bar styles------------------------------------------------------------- */
@@ -82,6 +83,7 @@ or else app font overflows due to increased line-height from page-wrapper */
 }
 
 .content-wrapper {
+  /*display: none;*/
   border: 2px solid red;
   width: 95%;
   margin: 0 auto;
@@ -236,7 +238,7 @@ footer {
 }
 
 .footer-social-media {
-  margin-top: 130px;
+  /*margin-top: 130px;*/
 }
 
 
@@ -253,7 +255,7 @@ footer {
 }
 
 .contact-links a {
-  padding: 10px;
+  padding: 1em;
 }
 
 .contact-links, .contact {
@@ -303,6 +305,10 @@ footer {
 
 /*TABLET rule kicks in when @ 768 and above*/
 @media only screen and (min-width: 768px) {
+
+  .page-wrapper {
+     /*width: 90%;*/
+  }
   .primary-banner {
    margin-bottom: 5em;
   }
@@ -324,14 +330,6 @@ footer {
 
 
   } /*End of tablet*/
-
-
-/*.one, .two {
-  display: inline-block;
-  width: 50%;
-}*/
-
-
 
 
 /*DESKTOP*/
